[package]
name = "lidar_vl53l0x"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
critical-section-lock-mut = "0.1.2"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
gc9a01-rs = "0.4.2"
microbit-v2 = "0.16"
nrf52833-hal = "0.18"
panic-rtt-target = "0.2"
rtt-target = "0.6"
vl53l0x = "1.0.1"
embedded-hal-bus = "0.3.0"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
